login with authentication server, still error, set default admin user

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -130,8 +130,8 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             <span style="margin-right: 20px; font-weight: bold; font-size: 18px"
-              >Welcome, {{ user[0].username }}</span
-            > <!--fullname-->
+              >Welcome, {{ user[0].firstName }} {{user[0].lastName}}</span
+            >
             <img
               src="../../../assets/images/profilePhoto.jpg"
               alt="profileImage"
