update profile page

--- a/client/src/app/pages/account-settings/account-settings.component.html
+++ b/client/src/app/pages/account-settings/account-settings.component.html
@@ -4,10 +4,10 @@
 </div>
 
 <div class="container">
-  <h1>Account Settings</h1>
 
   <div class="mt-4 row">
-    <div class="card column">
+    <div class="card column center">
+      <h1>Account Settings</h1>
       <div class="card-body">
         <h4 class="card-title font-weight-bold">Update Account Details</h4>
         <form (submit)="handleUpdateAccoutDetails($event)" ngNativeValidate>
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="card column">
+    <!-- <div class="card column">
       <div class="card-body">
         <h4 class="card-title font-weight-bold">Change Password</h4>
         <form (submit)="handleChangePassword($event)" ngNativeValidate>
@@ -81,6 +81,6 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
