--- a/client/src/app/pages/profile/profile.component.html
+++ b/client/src/app/pages/profile/profile.component.html
@@ -4,5 +4,31 @@
 </div>
 
 <div class="All container">
-  <h1>Your Information</h1>
+
+  <div class="mt-4 row">
+    <div class="card column center">
+      <h1>Your Information</h1>
+      <div class="card-body">
+        <div class="mb-3 mt-4">
+          <label for="email" class="form-label">Email</label>:
+          <label>{{curUser.email}}</label>
+        </div>
+        <div class="mb-3 mt-4">
+          <label for="fname" class="form-label">First Name</label>:
+          <label>{{curUser.firstName}}</label>
+        </div>
+        <div class="mb-3 mt-4">
+          <label for="lname" class="form-label">Last Name</label>:
+          <label>{{curUser.lastName}}</label>
+        </div>
+        <div class="mb-3 mt-4">
+          <label for="phone" class="form-label">Phone</label>:
+          <label>{{curUser.phone}}</label>
+        </div>
+        <div class="d-grid mt-4">
+          <button class="btn btn-primary" (click)="goToUpdate()">Setting Details</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
