--- a/client/src/app/pages/profile/profile.component.scss
+++ b/client/src/app/pages/profile/profile.component.scss
@@ -5,3 +5,28 @@ h1 {
   color: black;
   margin: 0 5px 20px 0;
 }
+.column {
+  float: left;
+  max-width: 49%;
+  box-shadow: '0px 0px 7px #ccc';
+}
+.center{ margin: 0 auto;}
+.column + .column {
+  margin-left: 2%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.mt-4 {
+  padding-bottom: 20px;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+  .column + .column {
+    margin-left: 0;
+  }
+}
