add layout for flight-booking

--- a/client/src/app/pages/airport/airport.component.html
+++ b/client/src/app/pages/airport/airport.component.html
@@ -6,7 +6,7 @@
 <div class="All container">
   <h1>AIRPORT MANAGEMENT</h1>
   <div class="d-grid mt-4">
-    <button type="button" class="btn btn-primary" (click)="goToAddAirPort()">Add Flight</button>
+    <button type="button" class="btn btn-primary" (click)="goToAddAirPort()">Add Airport</button>
   </div>
   <div class="table-responsive">
     <table class="table">
