--- a/client/src/app/pages/flight-booking/flight-booking.component.html
+++ b/client/src/app/pages/flight-booking/flight-booking.component.html
@@ -114,6 +114,7 @@
                       name="childrenCount"
                       required
                     >
+                      <option>0</option>
                       <option>1</option>
                       <option>2</option>
                       <option>3</option>
