update some things

--- a/client/src/app/pages/add-schedule/add-schedule.component.html
+++ b/client/src/app/pages/add-schedule/add-schedule.component.html
@@ -26,7 +26,8 @@
             </label>
             <select id="origin" name="origin" [(ngModel)]="origin" required>
               <option value="Choose">Choose Origin</option>
-              <option value="Mumbai">Mumbai</option>
+              <option value="CDA">Cedar Rapids Airport</option>
+              <option value="SNA">John Wayne Airport</option>
             </select>
           </div>
 
@@ -38,7 +39,8 @@
             <select id="destination" name="destination"
               [(ngModel)]="destination" required >
               <option value="Choose">Choose Destination</option>
-              <option value="Mumbai">Mumbai</option>
+              <option value="CDA">Cedar Rapids Airport</option>
+              <option value="SNA">John Wayne Airport</option>
             </select>
           </div>
 
