--- a/client/src/app/pages/flight-booking/flight-booking.component.scss
+++ b/client/src/app/pages/flight-booking/flight-booking.component.scss
@@ -20,7 +20,8 @@ h1 {
 }
 
 .booking-form {
-	background: rgba(127, 205, 228, 0.7);
+	// background: #eee; rgba(127, 205, 228, 0.7);
+  background: #eee;
 	padding: 40px;
 	border-radius: 10px;
 }
