--- a/client/src/app/pages/flight/flight.component.html
+++ b/client/src/app/pages/flight/flight.component.html
@@ -5,9 +5,9 @@
 
 <div class="All container">
   <h1>FLIGHT MANAGEMENT</h1>
-  <div class="d-grid mt-4">
+  <!-- <div class="d-grid mt-4">
     <button type="button" class="btn btn-primary" (click)="goToAddFlight()">Add Flight</button>
-  </div>
+  </div> -->
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -16,7 +16,7 @@
           <th>Carrier Name</th>
           <th>Flight Model</th>
           <th>Seat Capacity</th>
-          <th>Action</th>
+          <!-- <th>Action</th> -->
         </tr>
       </thead>
       <tbody>
@@ -25,10 +25,10 @@
           <td>2</td>
           <td>3</td>
           <td>4</td>
-          <td>
+          <!-- <td>
             <button type="button" class="btn btn-info">Edit</button>
             <button type="button" class="btn btn-danger">Delete</button>
-          </td>
+          </td> -->
         </tr>
       </tbody>
     </table>
