--- a/client/src/app/pages/airport/airport.component.html
+++ b/client/src/app/pages/airport/airport.component.html
@@ -5,9 +5,11 @@
 
 <div class="All container">
   <h1>AIRPORT MANAGEMENT</h1>
-  <!-- <div class="d-grid mt-4">
-    <button type="button" class="btn btn-primary" (click)="goToAddAirPort()">Add Airport</button>
-  </div> -->
+
+  <div class="d-grid mt-4">
+    <button type="button" class="btn btn-outline-primary" (click)="showAddAirport()">Add Airport</button>
+  </div>
+
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -15,7 +17,7 @@
           <th>Airport Code</th>
           <th>Location</th>
           <th>Airport Name</th>
-          <!-- <th>Action</th> -->
+          <th>Action</th>
         </tr>
       </thead>
 
@@ -24,13 +26,13 @@
           <td>{{ap.code}}</td>
           <td>{{ap.location}}</td>
           <td>{{ap.name}}</td>
-          <!-- <td>
-            <button type="button" class="btn btn-info" (click)="goToEditAirport(app.code);">Edit</button>
-            <button type="button" class="btn btn-danger">Delete</button>
-          </td> -->
+          <td>
+            <button type="button" class="btn btn-outline-info" [routerLink]="['/edit', ap.code]" routerLinkActive="router-link-active" >Edit</button>
+            <button type="button" class="btn btn-outline-danger" (click)="deleteAirport(ap.code);">Delete</button>
+          </td>
         </tr>
       </tbody>
     </table>
   </div>
-
 </div>
+
