--- a/client/src/app/pages/schedule/schedule.component.html
+++ b/client/src/app/pages/schedule/schedule.component.html
@@ -5,9 +5,9 @@
 
 <div class="All container">
   <h1>SCHEDUAL MANAGEMENT</h1>
-  <!-- <div class="d-grid mt-4">
+  <div class="d-grid mt-4">
     <button type="button" class="btn btn-primary" (click)="goToAddSchedual()">Add Schedual</button>
-  </div> -->
+  </div>
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -32,10 +32,10 @@
           <td>{{sl.schedule.deptDateTime}}</td>
           <td>{{sl.schedule.arrDateTime}}</td>
           <td>{{sl.economicPrice}}</td>
-          <!-- <td>
+          <td>
             <button type="button" class="btn btn-info">Edit</button>
             <button type="button" class="btn btn-danger">Delete</button>
-          </td> -->
+          </td>
         </tr>
       </tbody>
     </table>
