--- a/client/src/app/pages/airport/airport.component.html
+++ b/client/src/app/pages/airport/airport.component.html
@@ -7,7 +7,9 @@
   <h1>AIRPORT MANAGEMENT</h1>
 
   <div class="d-grid mt-4">
-    <button type="button" class="btn btn-outline-primary" (click)="showAddAirport()">Add Airport</button>
+    <button mat-mini-fab color="primary" class="btn-outline-primary" (click)="showAddAirport()" aria-label="Add Airport">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
 
   <div class="table-responsive">
@@ -27,8 +29,14 @@
           <td>{{ap.location}}</td>
           <td>{{ap.name}}</td>
           <td>
-            <button type="button" class="btn btn-outline-info" [routerLink]="['/edit', ap.code]" routerLinkActive="router-link-active" >Edit</button>
-            <button type="button" class="btn btn-outline-danger" (click)="deleteAirport(ap.code);">Delete</button>
+            <button mat-mini-fab color="primary" [routerLink]="['/edit', ap.code]" routerLinkActive="router-link-active">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab color="warn" (click)="deleteAirport(ap.code);">
+              <mat-icon>delete</mat-icon>
+            </button>
+            <!-- <button type="button" class="btn btn-outline-info" [routerLink]="['/edit', ap.code]" routerLinkActive="router-link-active" >Edit</button>
+            <button type="button" class="btn btn-outline-danger" (click)="deleteAirport(ap.code);">Delete</button> -->
           </td>
         </tr>
       </tbody>
