--- a/client/src/app/pages/schedule/schedule.component.html
+++ b/client/src/app/pages/schedule/schedule.component.html
@@ -6,8 +6,11 @@
 <div class="All container">
   <h1>SCHEDUAL MANAGEMENT</h1>
   <div class="d-grid mt-4">
-    <button type="button" class="btn btn-primary" (click)="goToAddSchedual()">Add Schedual</button>
+    <button mat-mini-fab color="primary" class="btn-outline-primary" (click)="goToAddSchedual()" aria-label="Add Flight">
+      <mat-icon>add</mat-icon>
+    </button>
   </div>
+
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -20,6 +23,7 @@
           <th>Departure Time</th>
           <th>Arrival Time</th>
           <th>Economic Class Price</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody *ngIf="scheduledFlights.length">
@@ -33,8 +37,18 @@
           <td>{{sl.schedule.arrDateTime}}</td>
           <td>{{sl.economicPrice}}</td>
           <td>
-            <button type="button" class="btn btn-info">Edit</button>
-            <button type="button" class="btn btn-danger">Delete</button>
+            <div class="mini-button">
+              <button mat-mini-fab color="primary">
+                <mat-icon>edit</mat-icon>
+              </button>
+            </div>
+
+            <div class="mini-button">
+              <button mat-mini-fab color="warn" >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+
           </td>
         </tr>
       </tbody>
