--- a/client/src/app/pages/add-schedule/add-schedule.component.html
+++ b/client/src/app/pages/add-schedule/add-schedule.component.html
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <input type="submit" value="SUBMIT" class="mt-5" />
+      <input type="submit" value="SUBMIT" class="mt-5 primary" />
     </div>
   </form>
 </div>
